--- a/Les_7/style.css
+++ b/Les_7/style.css
@@ -170,7 +170,7 @@ h1 {
 
 .button__collapse2 {
     background-color: black;
-    color: white;
+    color: rgb(230, 221, 221);
     width: 64px;
     position: absolute;
     text-align: center;
